force-app/bedrock/lib/rest/objects/Rest_Settings__c/Rest_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Rest Settings</label>
</CustomObject>