force-app/bedrock/lib/rest/objects/Rest_Settings__c/fields/Access_Denied_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Access_Denied_Status_Code__c</fullName>
    <label>Access Denied Status Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>