force-app/bedrock/lib/rest/objects/Rest_Settings__c/fields/Expose_Error_Details__c.field-meta.xml
<CustomField>
    <fullName>Expose_Error_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expose Error Details</label>
    <type>Checkbox</type>
</CustomField>