force-app/bedrock/lib/rest/objects/Rest_Settings__c/fields/Unknown_Route_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Unknown_Route_Status_Code__c</fullName>
    <label>Unknown Route Status Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>