force-app/bedrock/lib/rest/objects/Rest_Settings__c/fields/Unsupported_Method_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Unsupported_Method_Status_Code__c</fullName>
    <label>Unsupported Method Status Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>